@@ -66,6 +66,14 @@ page_arg controls how to reference 'page' in the the request_data
 
 has 'page_arg' => ( is => 'ro', isa => Str, default => 'list_page' );
 
+=attribute_public offset_arg is: ro, isa: Str, default: 'offset'
+
+offset_arg controls how to reference 'offset' in the the request_data
+
+=cut
+
+has 'offset_arg' => ( is => 'ro', isa => Str, default => 'list_offset' );
+
 =attribute_public select_arg is: ro, isa: Str, default: 'list_returns'
 
 select_arg controls how to reference 'select' in the the request_data
